plugins {
    id 'org.jetbrains.intellij' version '0.3.1'
    id 'io.franzbecker.gradle-lombok' version '1.13'
}

group 'edu.ucsd'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.12'
    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
    testCompile group: 'org.jmockit', name: 'jmockit', version: '1.39'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

intellij {
    version '2018.1.1'
}

patchPluginXml {
    changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>"""
}
